--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.13",
     "@mui/x-data-grid": "^5.17.11",
     "@mui/x-date-pickers": "^5.0.8",
