--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@iconify/icons-eva": "^1.2.4",
+    "@iconify/icons-ic": "^1.2.11",
+    "@iconify/react": "^4.0.1",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.13",
@@ -20,6 +23,7 @@
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "notistack": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0-alpha.7",
