--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^5.17.11",
     "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.0",
+    "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
