--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@mui/x-data-grid": "^5.17.11",
     "@mui/x-date-pickers": "^5.0.8",
     "@reduxjs/toolkit": "^1.9.0",
-    "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
+    "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "notistack": "^2.0.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-redux": "^8.0.5",
